test/should_fail/badstack2.qdbp
foo: {self!.}
stack: {
  Data[#Empty{}]
  Push[that|
    curr_data: self Data.
    { self
      Data[#NonEmpty {
        Val[that]
        Next[curr_data]
      }]
    }
  ]
  Peek[
    self Data.
      Empty?[foo!.]
      NonEmpty?[data| data Val.].
  ]
}

stack1: stack Push 3. Push 2.
stack2: stack1 Push 3.
stack3: stack2 Push "str".
a: stack3 Peek.
b: stack3 Peek. Peek.
a Print.